--- a/paper.bib
+++ b/paper.bib
@@ -32,18 +32,14 @@ year = "2012"
 	}
 
 
-
-@book{hastie2009,
-  author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
-  edition = 2,
-  keywords = {inference mathmatics dataanalysis method clutering statistics},
-  publisher = {Springer},
-  timestamp = {2010-06-03T15:15:09.000+0200},
-  title = {The elements of statistical learning: data mining, inference and prediction},
-  year = 2009
+@book{baesens2014,
+ author = {Baesens, Bart},
+ title = {Analytics in a Big Data World: The Essential Guide to Data Science and Its Applications},
+ year = {2014},
+ isbn = {1118892704, 9781118892701},
+ edition = {1st},
+ publisher = {Wiley Publishing},
 }
-
-
 
 
 
@@ -55,20 +51,9 @@ year = "2012"
   keywords = {},
   pages = {267--288},
   title = {{Regression shrinkage and selection via the Lasso}},
-  username = {aude.hofleitner},
   year = 1996
 }
 
-
-@Article{simon2011,
-    title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
-    author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
-    journal = {Journal of Statistical Software},
-    year = {2011},
-    volume = {39},
-    number = {5},
-    pages = {1--13}
-  }
 
 
 @book{buhlmann2011,
@@ -80,23 +65,6 @@ year = "2012"
 }
 
 
-@Manual{zeallot_package,
-    title = {zeallot: Multiple, Unpacking, and Destructuring Assignment},
-    author = {Nathan Teetor},
-    note = {R package version 0.1.0},
-    url = {https://github.com/nteetor/zeallot},
-  }
-
-@article{stefanski1987,
- author = {Leonard A. Stefanski and Raymond J. Carroll},
- journal = {Biometrika},
- number = {4},
- pages = {703-716},
- publisher = {[Oxford University Press, Biometrika Trust]},
- title = {Conditional Scores and Optimal Scores for Generalized Linear Measurement- Error Models},
- volume = {74},
- year = {1987}
-}
 
 
 @article{candes2007,
@@ -124,13 +92,6 @@ year = {2009}
 }
 
 
-@Manual{flare_package,
-title = {flare: Family of Lasso Regression},
-author = {Xingguo Li and Tuo Zhao and Lie Wang and Xiaoming Yuan and Han Liu},
-year = {2018},
-note = {R package version 1.6.0},
-url = {https://CRAN.R-project.org/package=flare},
-}
 
 @article{rosenbaum2010,
   author = "Rosenbaum, Mathieu and Tsybakov, Alexandre B.",
@@ -210,157 +171,33 @@ year = "2012"
 }
 
 
-@book{carroll2006,
-	Author = {Raymond J. Carroll and David Ruppert and Leonard A. Stefanski and Ciprian M. Crainiceanu},
-	Publisher = {Chapman \& Hall/CRC},
-	Title = {Measurement Error in Nonlinear Models: A Modern Perspective, Second Edition},
-	address = {Boca Raton, FL, USA},
-	Year = {2006}
-	}
 
 
 
-@book{hastie2009,
-  author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
-  edition = 2,
-  keywords = {inference mathmatics dataanalysis method clutering statistics},
-  publisher = {Springer},
-  timestamp = {2010-06-03T15:15:09.000+0200},
-  title = {The elements of statistical learning: data mining, inference and prediction},
-  year = 2009
+
+
+
+
+
+@article{vasquez2019,
+author = {Monica M Vasquez and Chengcheng Hu and Denise J Roe and Marilyn Halonen and Stefano Guerra},
+title ={Measurement error correction in the least absolute shrinkage and selection operator model when validation data are available},
+journal = {Statistical Methods in Medical Research},
+volume = {28},
+number = {3},
+pages = {670-680},
+year = {2019},
+doi = {10.1177/0962280217734241},
+URL = {https://doi.org/10.1177/0962280217734241}
 }
 
 
 
-
-
-@article{tibshirani1996,
-  author = {Tibshirani, R.},
-  groups = {public},
-  issn = {0035-9246},
-  journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
-  keywords = {},
-  pages = {267--288},
-  title = {{Regression shrinkage and selection via the Lasso}},
-  username = {aude.hofleitner},
-  year = 1996
+@Manual{rbib,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2018},
+  url = {https://www.R-project.org/},
 }
-
-
-@Article{simon2011,
-    title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
-    author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
-    journal = {Journal of Statistical Software},
-    year = {2011},
-    volume = {39},
-    number = {5},
-    pages = {1--13}
-  }
-
-
-@book{buhlmann2011,
-  author = {B{\"u}hlmann, Peter and van de Geer, Sara},
-  publisher = {Springer, Heidelberg},
-  series = {Springer Series in Statistics},
-  title = {Statistics for high-dimensional data},
-  year = 2011
-}
-
-
-@Manual{zeallot_package,
-    title = {zeallot: Multiple, Unpacking, and Destructuring Assignment},
-    author = {Nathan Teetor},
-    note = {R package version 0.1.0},
-    url = {https://github.com/nteetor/zeallot},
-  }
-
-@article{stefanski1987,
- author = {Leonard A. Stefanski and Raymond J. Carroll},
- journal = {Biometrika},
- number = {4},
- pages = {703-716},
- publisher = {[Oxford University Press, Biometrika Trust]},
- title = {Conditional Scores and Optimal Scores for Generalized Linear Measurement- Error Models},
- volume = {74},
- year = {1987}
-}
-
-
-@article{candes2007,
-author = "Candes, Emmanuel and Tao, Terence",
-fjournal = "The Annals of Statistics",
-journal = "Ann. Statist.",
-month = "12",
-number = "6",
-pages = "2313--2351",
-publisher = "The Institute of Mathematical Statistics",
-title = "The Dantzig selector: Statistical estimation when p is much larger than n",
-volume = "35",
-year = "2007"
-}
-
-
-@article{james2009,
-author = {James, Gareth M. and Radchenko, Peter},
-title = {A generalized Dantzig selector with shrinkage tuning},
-journal = {Biometrika},
-volume = {96},
-number = {2},
-pages = {323-337},
-year = {2009}
-}
-
-
-@article{rosenbaum2010,
-  author = "Rosenbaum, Mathieu and Tsybakov, Alexandre B.",
-  fjournal = "The Annals of Statistics",
-  journal = "Ann. Statist.",
-  month = "10",
-  number = "5",
-  pages = "2620--2651",
-  title = "Sparse recovery under matrix uncertainty",
-  volume = "38",
-  year = "2010"
-}
-
-@article{sorensen2018,
-  author = {Oystein Sorensen and Kristoffer Herland Hellton and Arnoldo Frigessi and Magne Thoresen},
-  title = {Covariate Selection in High-Dimensional Generalized Linear Models With Measurement Error},
-  journal = {Journal of Computational and Graphical Statistics},
-  volume = {27},
-  number = {4},
-  pages = {739-749},
-  year  = {2018},
-  publisher = {Taylor & Francis},
-  doi = {10.1080/10618600.2018.1425626},
-  URL = {https://doi.org/10.1080/10618600.2018.1425626},
-  eprint = {https://doi.org/10.1080/10618600.2018.1425626}
-}
-
-
-  @Manual{theussl2019,
-    title = {Rglpk: R/GNU Linear Programming Kit Interface},
-    author = {Stefan Theussl and Kurt Hornik},
-    year = {2019},
-    note = {R package version 0.6-4},
-    url = {https://CRAN.R-project.org/package=Rglpk},
-  }
-
-
-@Article{eddelbuettel2014,
-    title = {RcppArmadillo: Accelerating R with high-performance C++ linear algebra},
-    author = {Dirk Eddelbuettel and Conrad Sanderson},
-    journal = {Computational	Statistics and Data Analysis},
-    year = {2014},
-    volume = {71},
-    month = {March},
-    pages = {1054--1063}
-  }
-
-
-@article{Kristensen2014,
-	Author = {Kristensen, Vessela N. and Lingj{\ae}rde, Ole Christian and Russnes, Hege G. and Vollan, Hans Kristian M. and Frigessi, Arnoldo and B{\o}rresen-Dale, Anne-Lise},
-	Journal = {Nature Reviews Cancer},
-	Title = {Principles and methods of integrative genomic analyses in cancer},
-	Volume = {14},
-	Year = {2014}}
