--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # hdme
 <!-- badges: start -->
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/hdme)](https://cran.r-project.org/package=hdme)
-[![codecov](https://codecov.io/gh/osorensen/hdme/branch/master/graph/badge.svg)](https://codecov.io/gh/osorensen/hdme)
+[![codecov](https://codecov.io/gh/osorensen/hdme/branch/master/graph/badge.svg)](https://app.codecov.io/gh/osorensen/hdme)
 [![DOI](http://joss.theoj.org/papers/10.21105/joss.01404/status.svg)](https://doi.org/10.21105/joss.01404)
 [![R-CMD-check](https://github.com/osorensen/hdme/workflows/R-CMD-check/badge.svg)](https://github.com/osorensen/hdme/actions)
 <!-- badges: end -->
